homeworks/andrii_kharkovyi/module-3/lesson-08/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: course-app-andrii-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - course-app-andrii-kharkovyi.local
  rules:
    - host: course-app-andrii-kharkovyi.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: course-app-andrii-kharkovyi-service
                port:
                  number: 80
